text rendering fixes

--- a/doc/source/users/tutorials/beyond/combining-observations.ipynb
+++ b/doc/source/users/tutorials/beyond/combining-observations.ipynb
@@ -48,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "obssim = ctools.ctobssim()\n",
@@ -86,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This will produce the two event files events1.fits and events2.fits on disk.\n",
+    "This will produce the two event files `events1.fits` and `events2.fits` on disk.\n",
     "\n",
     "As next step you have to create an observation definition XML file that collects both observations in a list. We'll do it in Python, but for a simple observation definition file like this you could also create it using a text editor."
    ]
@@ -151,7 +153,7 @@
     "\n",
     "## Combined likelihood analysis\n",
     "\n",
-    "Now you are ready to do a joint maximum likelihood analysis using ctlike."
+    "Now you are ready to do a joint maximum likelihood analysis using `ctlike`."
    ]
   },
   {
@@ -177,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of providing an event list or a counts cube, you now provide the filename of the observation definition XML file (here obs.xml) as input parameter. ctlike recognises this format and automatically performs a joint maximum likelihood analysis. "
+    "Instead of providing an event list or a counts cube, you now provide the filename of the observation definition XML file (here `obs.xml`) as input parameter. `ctlike` recognises this format and automatically performs a joint maximum likelihood analysis. "
    ]
   },
   {
