--- a/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
+++ b/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "ctools provides two Python modules that allow using all tools and scripts as Python classes. To use ctools from Python you have to import the `ctools` and `cscripts` modules into Python. You should also import the `gammalib` module, as ctools without GammaLib is generally not very useful.\n",
     "\n",
-    "__Warning:__ Always import gammalib before you import ctools and cscripts."
+    "__Warning:__ Always import `gammalib` before you import `ctools` and `cscripts`."
    ]
   },
   {
