--- a/doc/source/users/tutorials/beyond/stacked-analysis.ipynb
+++ b/doc/source/users/tutorials/beyond/stacked-analysis.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "## Stacking Events\n",
     "\n",
-    "The event stacking is done using the `ctbin` tool. Instead of providing to ctbin an event list you should specify the observation definition XML file on input. `ctbin` will then loop over all observations and collect all events into a single counts cube."
+    "The event stacking is done using the `ctbin` tool. Instead of providing to `ctbin` an event list you should specify the observation definition XML file on input. `ctbin` will then loop over all observations and collect all events into a single counts cube."
    ]
   },
   {
@@ -169,9 +169,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You have noticed that for `ctexpcube` you provided an input counts cube, while for the other tools you specified NONE. By providing an input counts cube you instructed ctexpcube to extract the geometry of the cube from the counts cube. This is a convenient trick to reduce the number of user parameters that you need to specify. You did however not apply this trick for `ctpsfcube` and `ctedispcube`. In fact, the point spread function and energy dispersion do not vary significantly on spatial scales of 0.02°, and using the counts cube definition for these cubes would lead to large response cube files with a spatial precision that is actually not needed (the point spread function and energy dispersion cubes are actually 4-dimensional data cubes, hence their size increases quickly for a large number of spatial pixels). Therefore, you have specified a larger image scale of 1° for both cubes and only a small number of 10x10 spatial pixels, leading to point spread function and energy dispersion cubes of modest size (a few MB).\n",
+    "You have noticed that for `ctexpcube` you provided an input counts cube, while for the other tools you specified NONE. By providing an input counts cube you instructed `ctexpcube` to extract the geometry of the cube from the counts cube. This is a convenient trick to reduce the number of user parameters that you need to specify. You did however not apply this trick for `ctpsfcube` and `ctedispcube`. In fact, the point spread function and energy dispersion do not vary significantly on spatial scales of 0.02°, and using the counts cube definition for these cubes would lead to large response cube files with a spatial precision that is actually not needed (the point spread function and energy dispersion cubes are actually 4-dimensional data cubes, hence their size increases quickly for a large number of spatial pixels). Therefore, you have specified a larger image scale of 1° for both cubes and only a small number of 10x10 spatial pixels, leading to point spread function and energy dispersion cubes of modest size (a few MB).\n",
     "\n",
-    "You provided the `obs.xml` file that defines all observations on input so that the tools know which observations were combined in the ctbin run. As final step of the analysis preparation, you need to generate a background cube using the `ctbkgcube` tool."
+    "You provided the `obs.xml` file that defines all observations on input so that the tools know which observations were combined in the `ctbin` run. As final step of the analysis preparation, you need to generate a background cube using the `ctbkgcube` tool."
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The usage of `ctbkgcube` is very similar to that of ctexpcube, yet it takes the model definition XML file as an additional input parameter. You used here the usual `$CTOOLS/share/models/crab.xml` model file that is shipped with the ctools. `ctbkgcube` provides on output the background cube file `bkgcube.fits` and the model definition XML file `model.xml` that can be used for further analysis. Having a look at the `model.xml` file illustrates how the background modelling works:"
+    "The usage of `ctbkgcube` is very similar to that of `ctexpcube`, yet it takes the model definition XML file as an additional input parameter. You used here the usual `$CTOOLS/share/models/crab.xml` model file that is shipped with the ctools. `ctbkgcube` provides on output the background cube file `bkgcube.fits` and the model definition XML file `model.xml` that can be used for further analysis. Having a look at the `model.xml` file illustrates how the background modelling works:"
    ]
   },
   {
@@ -244,7 +244,7 @@
     "\n",
     "## Likelihood fitting\n",
     "\n",
-    "Now you have all files at hand to perform a stacked maximum likelihood analysis using the ctlike tool:"
+    "Now you have all files at hand to perform a stacked maximum likelihood analysis using the `ctlike` tool:"
    ]
   },
   {
@@ -271,9 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ctlike uses as input observations the counts cube and therefore needs also  the exposure cube, the PSF cube, and the background cube file names.\n",
+    "`ctlike` uses as input observations the counts cube and therefore needs also  the exposure cube, the PSF cube, and the background cube file names.\n",
     "\n",
-    "The results of the ctlike run are shown below."
+    "The results of the `ctlike` run are shown below."
    ]
   },
   {
