--- a/doc/source/users/tutorials/beyond/advanced-python-fitting.ipynb
+++ b/doc/source/users/tutorials/beyond/advanced-python-fitting.ipynb
@@ -540,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The addition of the new point source has flattened the spatial residuals, even though the fit is not perfect yet obvisouly. From now on we will fix the position of Scr1."
+    "The addition of the new point source has flattened the spatial residuals, even though the fit is not perfect yet obviously. From now on we will fix the position of Scr1."
    ]
   },
   {
