Do some minor documentation adjustments

--- a/doc/source/users/tutorials/beyond/combining-observations.ipynb
+++ b/doc/source/users/tutorials/beyond/combining-observations.ipynb
@@ -101,16 +101,14 @@
    },
    "outputs": [],
    "source": [
-    "import xml.etree.cElementTree as ET\n",
-    "\n",
-    "obslist = ET.Element(\"observation_list\", title=\"observation library\")\n",
+    "xml     = gammalib.GXml()\n",
+    "obslist = xml.append('observation_list title=\"observation library\"')\n",
     "\n",
     "for i in range(2):\n",
-    "    obs = ET.SubElement(obslist, \"observation\", name=\"Crab\", id=\"{:02d}\".format(i+1), instrument=\"CTA\")\n",
-    "    ET.SubElement(obs, \"parameter\", name=\"EventList\", file=\"events{}.fits\".format(i+1))\n",
+    "    obs = obslist.append('observation name=\"Crab\" id=\"%02d\" instrument=\"CTA\"' % (i+1))\n",
+    "    obs.append('parameter name=\"EventList\" file=\"events%d.fits\"' % (i+1))\n",
     "\n",
-    "tree = ET.ElementTree(obslist)\n",
-    "tree.write(\"obs.xml\",xml_declaration=True,encoding='UTF-8')"
+    "xml.save('obs.xml')"
    ]
   },
   {
