Correctly strip .gz suffix from output file names (#2287)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-11-28
+2018-01-09
 
         * Version 1.5.0 released
         ========================
 
+        Correctly strip .gz suffix from output filenames (#2287)
         Support On/Off analysis in cslightcrv and csphasecrv (#2273)
         Add tutorial for classical analysis (#2267)
         Fix chatter level handling in ctpsfcube (#2262)
