--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 1.5.0 released
         ========================
 
+        Add ctools::time_reference constant and remove ctools::time_reference() method (#2295)
         Correctly strip .gz suffix from output filenames (#2287)
         Support On/Off analysis in cslightcrv and csphasecrv (#2273)
         Add tutorial for classical analysis (#2267)
