--- a/AUTHORS
+++ b/AUTHORS
@@ -15,5 +15,6 @@ Michael Mayer (michael.mayer@physik.hu-berlin.de)
 Stefan Ohm (stefan.ohm81@gmail.com)
 David Sanchez (david.sanchez@lapp.in2p3.fr)
 Hubert Siejkowski (h.siejkowski@cyfronet.pl)
+Andreas Specovius (andreas.specovius@fau.de)
 Luigi Tibaldo (luigi.tibaldo@irap.omp.eu)
 Alexander Ziegler (alexander.ziegler@fau.de)
