--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -54,6 +54,8 @@ Improvements
   Enhance efficiency of computations in :ref:`ctmodel`
 * [`1927 <https://cta-redmine.irap.omp.eu/issues/1927>`_] -
   Add ``NODES`` method to :ref:`csspec` to support non-CTA analysis
+* [`1836 <https://cta-redmine.irap.omp.eu/issues/1836>`_] -
+  Set ``OBS_ID`` in :ref:`ctobssim`
 
 
 New features
