--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-01-22
+2018-01-23
 
         * Version 1.5.0 released
         ========================
@@ -7,7 +7,8 @@
           DATE-END, TIME-OBS and TIME-END
         Add CUSTOM background method to csphagen script (#2284)
         Add csresspec script (#2289)
-        Add ctools::time_reference constant and remove ctools::time_reference() method (#2295)
+        Add ctools::time_reference constant and remove ctools::time_reference()
+          method (#2295)
         Correctly strip .gz suffix from output filenames (#2287)
         Support On/Off analysis in cslightcrv and csphasecrv (#2273)
         ctselect informs about non-overlapping time interval (#2272)
@@ -25,6 +26,7 @@
         Add "NODES" method to csspec to support non-CTA analysis (#1927)
         Use t-type parameters for all "tmin" and "tmax" parameters (#1864)
         Set OBS_ID in ctobssim (#1836)
+        Add ctbutterfly::butterfly() method (#1512)
 
 
 2017-07-28
