--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
         Add "NODES" method to csspec to support non-CTA analysis (#1927)
         Use t-type parameters for all "tmin" and "tmax" parameters (#1864)
         Set OBS_ID in ctobssim (#1836)
+        Revise cstsdist parameters (#1567)
         Add ctbutterfly::butterfly() method (#1512)
 
 
