Update cscripts reference manual

--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -88,4 +88,4 @@ Clean up
   :ref:`csspec` and :ref:`cstsdist` scripts from ``cslikelihood`` base
   class
 * [`1567 <https://cta-redmine.irap.omp.eu/issues/1567>`_] -
-  Revise :ref:`cstsdist parameters`
+  Revise :ref:`cstsdist` parameters
