--- a/doc/source/users/tutorials/beyond/combining-observations.ipynb
+++ b/doc/source/users/tutorials/beyond/combining-observations.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gammalib\n",
@@ -47,40 +45,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# First pointing\n",
     "obssim = ctools.ctobssim()\n",
-    "\n",
-    "# first pointing\n",
-    "obssim['ra'] = 83.63\n",
-    "obssim['dec'] = 21.51\n",
-    "obssim['rad'] = 5.0\n",
-    "obssim['tmin'] = 0\n",
-    "obssim['tmax'] = 1800\n",
-    "obssim['caldb'] = 'prod2'\n",
-    "obssim['irf'] = 'South_0.5h'\n",
-    "obssim['inmodel'] = '$CTOOLS/share/models/crab.xml'\n",
+    "obssim['ra']        = 83.63\n",
+    "obssim['dec']       = 21.51\n",
+    "obssim['rad']       = 5.0\n",
+    "obssim['tmin']      = 0\n",
+    "obssim['tmax']      = 1800\n",
+    "obssim['caldb']     = 'prod2'\n",
+    "obssim['irf']       = 'South_0.5h'\n",
+    "obssim['inmodel']   = '$CTOOLS/share/models/crab.xml'\n",
     "obssim['outevents'] = 'events1.fits'\n",
-    "\n",
     "obssim.execute()\n",
     "\n",
-    "# second pointing\n",
+    "# Second pointing\n",
     "obssim = ctools.ctobssim()\n",
-    "\n",
-    "obssim['ra'] = 83.63\n",
-    "obssim['dec'] = 22.51\n",
-    "obssim['rad'] = 5.0\n",
-    "obssim['tmin'] = 1800\n",
-    "obssim['tmax'] = 3600\n",
-    "obssim['caldb'] = 'prod2'\n",
-    "obssim['irf'] = 'South_0.5h'\n",
-    "obssim['inmodel'] = '$CTOOLS/share/models/crab.xml'\n",
+    "obssim['ra']        = 83.63\n",
+    "obssim['dec']       = 22.51\n",
+    "obssim['rad']       = 5.0\n",
+    "obssim['tmin']      = 1800\n",
+    "obssim['tmax']      = 3600\n",
+    "obssim['caldb']     = 'prod2'\n",
+    "obssim['irf']       = 'South_0.5h'\n",
+    "obssim['inmodel']   = '$CTOOLS/share/models/crab.xml'\n",
     "obssim['outevents'] = 'events2.fits'\n",
-    "\n",
     "obssim.execute()"
    ]
   },
@@ -95,19 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "xml     = gammalib.GXml()\n",
     "obslist = xml.append('observation_list title=\"observation library\"')\n",
-    "\n",
     "for i in range(2):\n",
     "    obs = obslist.append('observation name=\"Crab\" id=\"%02d\" instrument=\"CTA\"' % (i+1))\n",
     "    obs.append('parameter name=\"EventList\" file=\"events%d.fits\"' % (i+1))\n",
-    "\n",
     "xml.save('obs.xml')"
    ]
   },
@@ -120,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +118,10 @@
       "=== GXml ===\n",
       "GXmlDocument::version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"\n",
       "GXmlElement::observation_list title=\"observation library\"\n",
-      "  GXmlElement::observation id=\"01\" instrument=\"CTA\" name=\"Crab\"\n",
-      "    GXmlElement::parameter file=\"events1.fits\" name=\"EventList\"\n",
-      "  GXmlElement::observation id=\"02\" instrument=\"CTA\" name=\"Crab\"\n",
-      "    GXmlElement::parameter file=\"events2.fits\" name=\"EventList\"\n"
+      "  GXmlElement::observation name=\"Crab\" id=\"01\" instrument=\"CTA\"\n",
+      "    GXmlElement::parameter name=\"EventList\" file=\"events1.fits\"\n",
+      "  GXmlElement::observation name=\"Crab\" id=\"02\" instrument=\"CTA\"\n",
+      "    GXmlElement::parameter name=\"EventList\" file=\"events2.fits\"\n"
      ]
     }
    ],
@@ -145,9 +133,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file contains a single observation_list tag that contains two observation tags that each define an observation. Each observation has a name, an id and an instrument attribute. The name attribute can have any arbitrary value, and may be the same for all observations. However, **the id attribute needs to be a unique character string for any given instrument**. The instrument attribute is a case-sensitive string that identifies the instrument with which the observation was taken. Please make sure that the instrument string is set correctly so that ctools knows which instrument specific functions need to be called.\n",
+    "The file contains a single `observation_list` tag that contains two observation tags that each define an observation. Each observation has a `name`, an `id` and an `instrument` attribute. The name attribute can have any arbitrary value, and may be the same for all observations. However, **the id attribute needs to be a unique character string for any given instrument**. The instrument attribute is a case-sensitive string that identifies the instrument with which the observation was taken. Please make sure that the instrument string is set correctly so that ctools knows which instrument specific functions need to be called.\n",
     "\n",
-    "Note: the instrument string for a CTA observation is unsurprisingly CTA. In case that you want to analyse data from an existing Imaging Air Cherenkov Telescope you can also set the instrument string to HESS, MAGIC, or VERITAS. You may also combine observations from different telescopes for a joint analysis in an observation definition file. Please recall that instrument strings are case sensitive.\n",
+    "**Note:** the instrument string for a CTA observation is unsurprisingly `CTA`. In case that you want to analyse data from an existing Imaging Air Cherenkov Telescope you can also set the instrument string to HESS, MAGIC, or VERITAS. You may also combine observations from different telescopes for a joint analysis in an observation definition file. Please recall that instrument strings are case sensitive.\n",
     "\n",
     "## Combined likelihood analysis\n",
     "\n",
@@ -156,20 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "like = ctools.ctlike()\n",
-    "\n",
-    "like['inobs'] = 'obs.xml'\n",
-    "like['caldb'] = 'prod2'\n",
-    "like['irf'] = 'South_0.5h'\n",
-    "like['inmodel'] = '$CTOOLS/share/models/crab.xml'\n",
+    "like['inobs']    = 'obs.xml'\n",
+    "like['caldb']    = 'prod2'\n",
+    "like['irf']      = 'South_0.5h'\n",
+    "like['inmodel']  = '$CTOOLS/share/models/crab.xml'\n",
     "like['outmodel'] = 'crab_results.xml'\n",
-    "\n",
     "like.run()"
    ]
   },
@@ -182,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +176,8 @@
       "=== GObservations ===\n",
       " Number of observations ....: 2\n",
       " Number of models ..........: 2\n",
-      " Number of observed events .: 201962\n",
-      " Number of predicted events : 201961.992585133\n"
+      " Number of observed events .: 47146\n",
+      " Number of predicted events : 47145.999611735\n"
      ]
     }
    ],
@@ -210,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "=== GOptimizerLM ===\n",
-      " Optimized function value ..: 756419.316\n",
+      " Optimized function value ..: 315261.211\n",
       " Absolute precision ........: 0.005\n",
       " Acceptable value decrease .: 2\n",
       " Optimization status .......: converged\n",
@@ -237,33 +221,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: since you only invoked the run() method the output XML file was not saved on disk. You can save it now by invoking the save() method, or save directly along with running by invoking the execute() method. \n",
+    "**Note:** since you only invoked the `run()` method the output XML file was not saved on disk. You can save it now by invoking the `save()` method, or save directly along with running by invoking the `execute()` method. \n",
     "\n",
-    "Combining observations is not limited to unbinned data (i.e. event lists) but may also be applied to binned data (i.e. counts cubes). Using ctbin you can create counts cubes from both event lists which may then be combined in an observation definition XML file, that has \"CountsCube\" rather than \"EventList\" parameters describing each observation.\n",
+    "Combining observations is not limited to unbinned data (i.e. event lists) but may also be applied to binned data (i.e. counts cubes). Using ctbin you can create counts cubes from both event lists which may then be combined in an observation definition XML file, that has `CountsCube` rather than `EventList` parameters describing each observation.\n",
     "\n",
     "Feeding the observation definition XML file to ctlike will then lead to a joint binned analysis. In the joint binned analysis, the events of individual observations are not combined, but are kept separate in distinct counts cubes. This is not very efficient, as generally counts cubes for short duration observations are only sparsly populated and the likelihood computation has to loop over a hugh number of data space bins (though also here ctlike benefits from multi-core parallel processing). Though possible, **a joint binned analysis is thus not the recommended method for combining observations**. An alternative is to stack the events of all observations into a single counts cube. The following section describes how such a stacked analysis is done with ctools.\n",
     "\n",
     "In principle, unbinned and binned observations may also be combined in a joint analysis, although this Use Case may be a bit academic."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
