--- a/doc/source/users/tutorials/beyond/stacked-analysis.ipynb
+++ b/doc/source/users/tutorials/beyond/stacked-analysis.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gammalib\n",
@@ -49,29 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "evbin = ctools.ctbin()\n",
-    "\n",
-    "evbin['inobs'] = 'obs.xml'\n",
-    "# we center the cube at the position of the Crab nebula\n",
-    "evbin['xref'] = 83.63\n",
-    "evbin['yref'] = 22.01\n",
-    "evbin['proj'] = 'CAR'\n",
+    "evbin['inobs']    = 'obs.xml'\n",
+    "evbin['xref']     = 83.63  # deg; we center the cube at the position of the Crab nebula\n",
+    "evbin['yref']     = 22.01  # deg\n",
+    "evbin['proj']     = 'CAR'\n",
     "evbin['coordsys'] = 'CEL'\n",
-    "evbin['binsz'] = 0.02 #deg/bin\n",
-    "evbin['nxpix'] = 200 \n",
-    "evbin['nypix'] = 200\n",
-    "evbin['ebinalg'] = 'LOG'\n",
-    "evbin['emin'] = 0.1 #TeV\n",
-    "evbin['emax'] = 100. #TeV\n",
+    "evbin['binsz']    = 0.02   # deg/bin\n",
+    "evbin['nxpix']    = 200 \n",
+    "evbin['nypix']    = 200\n",
+    "evbin['ebinalg']  = 'LOG'\n",
+    "evbin['emin']     = 0.1    # TeV\n",
+    "evbin['emax']     = 100.0  # TeV\n",
     "evbin['enumbins'] = 20\n",
-    "evbin['outcube'] = 'cntcube.fits'\n",
-    "\n",
+    "evbin['outcube']  = 'cntcube.fits'\n",
     "evbin.execute()"
    ]
   },
@@ -90,78 +83,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "expcube = ctools.ctexpcube()\n",
-    "\n",
-    "expcube['inobs'] = 'obs.xml'\n",
-    "expcube['caldb'] = 'prod2'\n",
-    "expcube['irf'] = 'South_0.5h'\n",
-    "expcube['incube'] = 'cntcube.fits'\n",
+    "expcube['inobs']   = 'obs.xml'\n",
+    "expcube['caldb']   = 'prod2'\n",
+    "expcube['irf']     = 'South_0.5h'\n",
+    "expcube['incube']  = 'cntcube.fits'  # exposure cube definition is copied from counts cube\n",
     "expcube['outcube'] = 'expcube.fits'\n",
-    "\n",
     "expcube.execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "psfcube = ctools.ctpsfcube()\n",
-    "\n",
-    "psfcube['inobs'] = 'obs.xml'\n",
-    "psfcube['caldb'] = 'prod2'\n",
-    "psfcube['irf'] = 'South_0.5h'\n",
-    "psfcube['incube'] = 'NONE'\n",
-    "psfcube['xref'] = 83.63\n",
-    "psfcube['yref'] = 22.01\n",
-    "psfcube['proj'] = 'CAR'\n",
+    "psfcube['inobs']    = 'obs.xml'\n",
+    "psfcube['caldb']    = 'prod2'\n",
+    "psfcube['irf']      = 'South_0.5h'\n",
+    "psfcube['incube']   = 'NONE'\n",
+    "psfcube['xref']     = 83.63\n",
+    "psfcube['yref']     = 22.01\n",
+    "psfcube['proj']     = 'CAR'\n",
     "psfcube['coordsys'] = 'CEL'\n",
-    "psfcube['binsz'] = 1.0\n",
-    "psfcube['nxpix'] = 10\n",
-    "psfcube['nypix'] = 10\n",
-    "psfcube['emin'] = 0.1\n",
-    "psfcube['emax'] = 100.\n",
+    "psfcube['binsz']    = 1.0   # deg/bin; the PSF only varies slowly\n",
+    "psfcube['nxpix']    = 10\n",
+    "psfcube['nypix']    = 10\n",
+    "psfcube['emin']     = 0.1\n",
+    "psfcube['emax']     = 100.0\n",
     "psfcube['enumbins'] = 20\n",
-    "psfcube['outcube'] = 'psfcube.fits'\n",
-    "\n",
+    "psfcube['outcube']  = 'psfcube.fits'\n",
     "psfcube.execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "edispcube = ctools.ctedispcube()\n",
-    "\n",
-    "edispcube['inobs'] = 'obs.xml'\n",
-    "edispcube['caldb'] = 'prod2'\n",
-    "edispcube['irf'] = 'South_0.5h'\n",
-    "edispcube['incube'] = 'NONE'\n",
-    "edispcube['xref'] = 83.63\n",
-    "edispcube['yref'] = 22.01\n",
-    "edispcube['proj'] = 'CAR'\n",
+    "edispcube['inobs']    = 'obs.xml'\n",
+    "edispcube['caldb']    = 'prod2'\n",
+    "edispcube['irf']      = 'South_0.5h'\n",
+    "edispcube['incube']   = 'NONE'\n",
+    "edispcube['xref']     = 83.63\n",
+    "edispcube['yref']     = 22.01\n",
+    "edispcube['proj']     = 'CAR'\n",
     "edispcube['coordsys'] = 'CEL'\n",
-    "edispcube['binsz'] = 1.0\n",
-    "edispcube['nxpix'] = 10\n",
-    "edispcube['nypix'] = 10\n",
-    "edispcube['emin'] = 0.1\n",
-    "edispcube['emax'] = 100.\n",
+    "edispcube['binsz']    = 1.0   # deg/bin; the energy dispersion only varies slowly\n",
+    "edispcube['nxpix']    = 10\n",
+    "edispcube['nypix']    = 10\n",
+    "edispcube['emin']     = 0.1\n",
+    "edispcube['emax']     = 100.0\n",
     "edispcube['enumbins'] = 20\n",
-    "edispcube['outcube'] = 'edispcube.fits'\n",
-    "\n",
+    "edispcube['outcube']  = 'edispcube.fits'\n",
     "edispcube.execute()"
    ]
   },
@@ -176,22 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "bkgcube = ctools.ctbkgcube()\n",
-    "\n",
-    "bkgcube['inobs'] = 'obs.xml'\n",
-    "bkgcube['caldb'] = 'prod2'\n",
-    "bkgcube['irf'] = 'South_0.5h'\n",
-    "bkgcube['incube'] = 'cntcube.fits'\n",
-    "bkgcube['inmodel'] = '$CTOOLS/share/models/crab.xml'\n",
-    "bkgcube['outcube'] = 'bkgcube.fits'\n",
+    "bkgcube['inobs']    = 'obs.xml'\n",
+    "bkgcube['caldb']    = 'prod2'\n",
+    "bkgcube['irf']      = 'South_0.5h'\n",
+    "bkgcube['incube']   = 'cntcube.fits'\n",
+    "bkgcube['inmodel']  = '$CTOOLS/share/models/crab.xml'\n",
+    "bkgcube['outcube']  = 'bkgcube.fits'\n",
     "bkgcube['outmodel'] = 'model.xml'\n",
-    "\n",
     "bkgcube.execute()"
    ]
   },
@@ -204,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,21 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "like = ctools.ctlike()\n",
-    "\n",
-    "like['inobs'] = 'cntcube.fits'\n",
-    "like['expcube'] = 'expcube.fits'\n",
-    "like['psfcube'] = 'psfcube.fits'\n",
-    "like['bkgcube'] = 'bkgcube.fits'\n",
-    "like['inmodel'] = 'model.xml'\n",
+    "like['inobs']    = 'cntcube.fits'\n",
+    "like['expcube']  = 'expcube.fits'\n",
+    "like['psfcube']  = 'psfcube.fits'\n",
+    "like['bkgcube']  = 'bkgcube.fits'\n",
+    "like['inmodel']  = 'model.xml'\n",
     "like['outmodel'] = 'crab_results.xml'\n",
-    "\n",
     "like.execute()"
    ]
   },
@@ -278,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,14 +259,14 @@
      "output_type": "stream",
      "text": [
       "=== GOptimizerLM ===\n",
-      " Optimized function value ..: 86422.452\n",
+      " Optimized function value ..: 86553.855\n",
       " Absolute precision ........: 0.005\n",
       " Acceptable value decrease .: 2\n",
       " Optimization status .......: converged\n",
       " Number of parameters ......: 10\n",
       " Number of free parameters .: 4\n",
-      " Number of iterations ......: 3\n",
-      " Lambda ....................: 1e-06\n"
+      " Number of iterations ......: 2\n",
+      " Lambda ....................: 1e-05\n"
      ]
     }
    ],
@@ -303,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +298,8 @@
       "  RA .......................: 83.6331 [-360,360] deg (fixed,scale=1)\n",
       "  DEC ......................: 22.0145 [-90,90] deg (fixed,scale=1)\n",
       " Number of spectral par's ..: 3\n",
-      "  Prefactor ................: 5.40797211044735e-16 +/- 6.94846530224995e-18 [1e-23,1e-13] ph/cm2/s/MeV (free,scale=1e-16,gradient)\n",
-      "  Index ....................: -2.47003134993771 +/- 0.0110330851626934 [-0,-5]  (free,scale=-1,gradient)\n",
+      "  Prefactor ................: 5.62952701160697e-16 +/- 7.07175778597347e-18 [1e-23,1e-13] ph/cm2/s/MeV (free,scale=1e-16,gradient)\n",
+      "  Index ....................: -2.47209940591081 +/- 0.0109407678001334 [-0,-5]  (free,scale=-1,gradient)\n",
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
@@ -338,8 +311,8 @@
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
       " Number of spectral par's ..: 3\n",
-      "  Prefactor ................: 1.01204145198916 +/- 0.011383931508583 [0.01,100] ph/cm2/s/MeV (free,scale=1,gradient)\n",
-      "  Index ....................: 0.0131705709801291 +/- 0.00679881308729772 [-5,5]  (free,scale=1,gradient)\n",
+      "  Prefactor ................: 1.02657265819585 +/- 0.0114880816442995 [0.01,100] ph/cm2/s/MeV (free,scale=1,gradient)\n",
+      "  Index ....................: 0.0148786718904421 +/- 0.00677272256425586 [-5,5]  (free,scale=1,gradient)\n",
       "  PivotEnergy ..............: 1000000 MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
@@ -356,56 +329,59 @@
     "collapsed": true
    },
    "source": [
-    "If you want to consider also the energy dispersion during the maximum likelihood fitting you should pass the hidden (i.e., not queried by the command line interface) `edisp` parameter to `ctlike`, and the energy dispersion cube:"
+    "If you want to consider also the energy dispersion during the maximum likelihood fitting you set the `edisp` parameter to `True` and provide the energy dispersion cube to the `edispcube` parameter:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "like = ctools.ctlike()\n",
-    "\n",
-    "like['inobs'] = 'cntcube.fits'\n",
-    "like['expcube'] = 'expcube.fits'\n",
-    "like['psfcube'] = 'psfcube.fits'\n",
-    "like['bkgcube'] = 'bkgcube.fits'\n",
-    "like['edisp'] = True\n",
-    "like['edispcube'] = 'edispcube.fits'\n",
-    "like['inmodel'] = 'model.xml'\n",
-    "like['outmodel'] = 'crab_results.xml'\n",
-    "\n",
-    "# like.execute()"
+    "like['inobs']     = 'cntcube.fits'\n",
+    "like['expcube']   = 'expcube.fits'\n",
+    "like['psfcube']   = 'psfcube.fits'\n",
+    "like['bkgcube']   = 'bkgcube.fits'\n",
+    "like['edisp']     = True                 # Set to True (is False by default)\n",
+    "like['edispcube'] = 'edispcube.fits'     # Provide energy dispersion cube\n",
+    "like['inmodel']   = 'model.xml'\n",
+    "like['outmodel']  = 'crab_results.xml'\n",
+    "# like.execute()                         # Uncomment if you have some time"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The maximum likelihood computation including energy dispersion is more time consuming**, and in many situations the impact of the energy dispersion on the analysis results will be very small. So make sure that you really need energy dispersion before you are using it. Uncomment the execute() call in the previous cell to perform the likelihood analysis including energy dispersion."
+    "**The maximum likelihood computation including energy dispersion is more time consuming**, and in many situations the impact of the energy dispersion on the analysis results will be very small. So make sure that you really need energy dispersion before you are using it. Uncomment the `execute()` call in the previous cell to perform the likelihood analysis including energy dispersion."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
